WIP, babel, functions, components, third party libraries

--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,15 @@
 {
-    "presets": ["env", "react"],
+    "presets": [
+        "env",
+        "react"
+    ],
     "plugins": [
-        "transform-class-properties"
+        "transform-class-properties",
+        [
+            "transform-runtime",
+            {
+                "regenerator": true
+            }
+        ]
     ]
 }
