--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "boilerplate",
+  "name": "weather-app",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -9,14 +9,20 @@
     "dev-server": "webpack-dev-server"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "@fortawesome/fontawesome-free": "^5.15.3",
     "babel": "^6.23.0",
     "babel-cli": "^6.26.0",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bootstrap": "^4.6.0",
     "css-loader": "^4.2.1",
+    "file-loader": "^6.2.0",
     "live-server": "^1.2.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
