--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.24.1",
     "bootstrap": "^4.6.0",
     "css-loader": "^4.2.1",
+    "dotenv-webpack": "^7.0.3",
     "file-loader": "^6.2.0",
     "live-server": "^1.2.1",
     "node-sass": "^4.14.1",
