--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "serve": "live-server public/",
     "build": "webpack",
-    "dev-server": "webpack-dev-server",
-    "test": "jest"
+    "dev-server": "webpack-dev-server"
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
@@ -25,7 +24,6 @@
     "css-loader": "^4.2.1",
     "dotenv-webpack": "^7.0.3",
     "file-loader": "^6.2.0",
-    "jest": "^27.0.6",
     "live-server": "^1.2.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
